# tg-action-handler

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  template.env
src/: main.py  settings.py
src/actions/: __init__.py  run_actions.py  send_periodic_message.py
src/base_lib/: utilities.py
src/base_lib/errors/: __init__.py  base_error.py
src/credentials/: __init__.py  tg_credentials.py
src/dependencies/: __init__.py  tg.py
src/services/: __init__.py  reader.py
src/tg_client/: __init__.py  base_client.py  client.py
